--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,11 @@
   "name": "election",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "watch": "tsc -w",
-    "start1": "node ./dist/app.js",
-    "start2": "nodemon ./dist/app.js",
-    "dev": "npm-run-all --parallel watch start2"
+    "start": "nodemon ./dist/app.js",
+    "dev": "npm-run-all --parallel watch start"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2"
