--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
