--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
